fix(): scrollbar fixes

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -11,3 +11,4 @@ html, body
   width: 100%
   font-family: Monaco, Menlo, 'DejaVu Sans Mono', 'Ubuntu Mono', monospace
   font-size: 12px
+  border: 1px solid transparent
